name:                moex-api
version:             0.0.1.0
synopsis:            Servant API types for moex API.
description:
  Definition for MOEX (Moscow Exchange) public API.
license:             MIT
license-file:        LICENSE
copyright:           2019 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/moex

library
  hs-source-dirs:      src
  exposed-modules:
    Moex.API
  build-depends:
      base            >= 4.5      && < 4.14
    , vector          >= 0.10     && < 0.13
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies
