name:                moex-client
version:             0.0.1.0
synopsis:            Servant client for MOEX API
description:
  Servant client for MOEX (Moscow Exchange) API
license:             MIT
license-file:        LICENSE
copyright:           2019 Anton Gushcha
maintainer:          Anton Gushcha <ncrashed@protonmail.com>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  README.md
  CHANGELOG.md
tested-with:
    GHC == 8.6.3
  , GHC == 8.4.4
  , GHC == 8.2.2

source-repository head
  type: git
  location: https://github.com/NCrashed/moex

library
  hs-source-dirs:      src
  exposed-modules:
    Moex.Client
  build-depends:
      base            >= 4.5      && < 4.14
    , moex-api        >= 0.0      && < 0.1
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeFamilies

executable moex-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL128m -with-rtsopts=-qb0
  build-depends:
      base
    , moex-client
  default-language:    Haskell2010
